# newtons-eye

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
content/: main.map
include/: common.hpp  engine.hpp
include/engine/: animation.hpp  board.hpp  graph.hpp  imgui.hpp  model.hpp  object.hpp  quad.hpp
shaders/: bgfx_shader.sh  fs_basic.sc  shaderlib.sh  varying.def.sc  vs_basic.sc
src/: common.cpp  engine.cpp  function-renderer.cpp  pgv.cpp
src/engine/: animation.cpp  board.cpp  graph.cpp  imgui.cpp  model.cpp  object.cpp  quad.cpp
